--- a/app/src/main/res/layout/tracksignal.xml
+++ b/app/src/main/res/layout/tracksignal.xml
@@ -42,7 +42,7 @@ android:orientation="horizontal" >
                 android:id="@+id/textViewSpeed" />
 
             <SeekBar
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/seekBarSpeed"
                 android:layout_weight="1"
