--- a/app/src/main/res/layout/turnout.xml
+++ b/app/src/main/res/layout/turnout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
@@ -10,23 +10,14 @@
         android:id="@+id/imageViewTurnout"
         android:src="@drawable/turnout" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/turnout_name"
-            android:id="@+id/textViewTurnout" />
-
-        <Switch
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/switchTurnout"
-            android:enabled="true"
-            android:checked="true" />
-    </LinearLayout>
+    <Switch
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/switchTurnout"
+        android:enabled="true"
+        android:checked="true"
+        android:text="@string/turnout_name"
+        android:textAppearance="@android:style/TextAppearance.Small"
+        android:textColor="@android:color/tertiary_text_light" />
 
 </LinearLayout>
