--- a/app/src/main/res/layout/fragment_bluetooth_enable.xml
+++ b/app/src/main/res/layout/fragment_bluetooth_enable.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@android:style/TextAppearance.Large"
-        android:text="Bluetooth is not enabled"
+        android:text="@string/bluetooth_not_enabled"
         android:layout_gravity="center"
         android:id="@+id/NoBtHeading"
         android:layout_above="@+id/NoBtExplanation"
@@ -20,7 +20,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enable bluetooth"
+        android:text="@string/enable_bluetooth"
         android:id="@+id/EnableBtButton"
         android:layout_gravity="center"
         android:layout_below="@+id/NoBtExplanation"
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Bluetooth is required for this app to function"
+        android:text="@string/bluetooth_required"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/NoBtExplanation"
