--- a/app/src/main/res/layout/fragment_bluetooth_enable.xml
+++ b/app/src/main/res/layout/fragment_bluetooth_enable.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.michael.traincontrol.BluetoothEnableFragment">
+    tools:context="de.rwthaachen.comsys.laboratory.vlc.traincontrol.BluetoothEnableFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
