--- a/app/src/main/res/layout/fragment_connect_error.xml
+++ b/app/src/main/res/layout/fragment_connect_error.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.michael.traincontrol.ConnectErrorFragment">
+    tools:context="de.rwthaachen.comsys.laboratory.vlc.traincontrol.ConnectErrorFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
